--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -90,3 +90,10 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/PK_DnD.PKDnDQueue.Array",NewName="/Script/PK_DnD.PKDnDQueue.QueueArray")
++PropertyRedirects=(OldName="/Script/PK_DnD.PKDNDTreeManager.RootNode",NewName="/Script/PK_DnD.PKDNDTreeManager.mRootNode")
++PropertyRedirects=(OldName="/Script/PK_DnD.PKDNDTreeManager.MaxDepth",NewName="/Script/PK_DnD.PKDNDTreeManager.mMaxDepth")
++PropertyRedirects=(OldName="/Script/PK_DnD.PKDNDTreeManager.ObjectSpacing",NewName="/Script/PK_DnD.PKDNDTreeManager.mObjectSpacing")
++PropertyRedirects=(OldName="/Script/PK_DnD.PKDNDTreeNode.Data",NewName="/Script/PK_DnD.PKDNDTreeNode.mData")
++PropertyRedirects=(OldName="/Script/PK_DnD.PKDNDTreeNode.MaxChildren",NewName="/Script/PK_DnD.PKDNDTreeNode.mMaxChildren")
++PropertyRedirects=(OldName="/Script/PK_DnD.PKDNDTreeNode.NodeChildren",NewName="/Script/PK_DnD.PKDNDTreeNode.mNodeChildren")
++PropertyRedirects=(OldName="/Script/PK_DnD.PKDNDTreeManager.NodeMesh",NewName="/Script/PK_DnD.PKDNDTreeManager.NodeObject")
