AStar code semi-implemented with comments

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -98,3 +98,4 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/PK_DnD.PKDNDTreeNode.NodeChildren",NewName="/Script/PK_DnD.PKDNDTreeNode.mChildren")
 +PropertyRedirects=(OldName="/Script/PK_DnD.PKDNDTreeManager.NodeMesh",NewName="/Script/PK_DnD.PKDNDTreeManager.NodeObject")
 +PropertyRedirects=(OldName="/Script/PK_DnD.PKDNDTreeNode.mNodeChildren",NewName="/Script/PK_DnD.PKDNDTreeNode.mChildren")
++FunctionRedirects=(OldName="/Script/PK_DnD.PKAStarCharacter.FollowPath",NewName="/Script/PK_DnD.PKAStarCharacter.PathToFollow")
